--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
     max-width: 1600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     text-align: center;
     background-color: #2F303A;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
@@ -10,6 +10,10 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    @media screen and (width:1200px){
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
 
 
 }
@@ -20,15 +24,31 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60/44);
+    font-size: 26px;
+    line-height: calc(42/26);
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
+
+    @media screen and (width:1200px){
+        font-size: 44px;
+        line-height: calc(60/44);
+    }
 }
 
 .info {
     padding-top: 94px;
+    @media screen and (min-width: 480px) {
+            padding-top: 60px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            padding-top: 60px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            padding-top: 94px;
+        }
 }
 
 .info-list {
@@ -38,6 +58,7 @@
 
 .info-item {
     margin-right: 30px;
+
     
 &::before {
     display: block;
@@ -80,6 +101,9 @@
     text-transform: uppercase;
     color: #212121;
     margin-bottom: 10px;
+    @media screen and (max-width: 767px) {
+            text-align: center;
+        }
 
 }
 
