--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -7,12 +7,17 @@
 
 .team-titel {
     font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42/36);
+    font-size: 28px;
+    line-height: calc(32/28);
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
     margin-bottom: 50px;
+    
+    @media screen and (min-width:1200px) {
+    font-size: 36px;
+    line-height: calc(42/36);
+    }
 }
 
 .team-list-titel {
