--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,6 @@ ul {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .list {
@@ -426,8 +424,8 @@ textarea {
 
 .team {
   background-color: #F5F4FA;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .team-titel {
@@ -764,7 +762,7 @@ textarea {
   background-position: center;
   background-size: cover;
 }
-@media screen and (width: 1200px) {
+@media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -809,14 +807,42 @@ textarea {
   }
 }
 
-.info-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .info-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .info-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .info-item {
-  margin-right: 30px;
+  width: 100%;
+}
+.info-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .info-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .info-item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 .info-item::before {
   display: block;
@@ -939,6 +965,34 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.client-item {
+  width: 100%;
+  height: 92px;
+  width: calc((100% - 30px) / 2);
+}
+@media screen and (max-width: 767px) {
+  .client-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .client-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 768px) {
+  .client-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client-item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .menu-list {
