--- a/scss/components/_client.scss
+++ b/scss/components/_client.scss
@@ -59,4 +59,29 @@
 .client-list {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+}
+
+.client-item{
+    width: 100%;
+    height: 92px;
+        width: calc((100% - 30px) / 2);
+    
+        @media screen and (max-width: 767px) {
+            &:not(:last-child) {
+                margin-bottom: 30px;
+            }
+        }
+    
+         @media screen and (min-width: 480px) {
+           width: calc((100% - 30px) / 2);
+         }
+        @media screen and (min-width: 768px) {
+            width: calc((100% - 60px) / 3);
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: calc((100% - 150px) / 6);
+        }
+
 }
