--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -118,9 +118,28 @@
 }
 
 .end-flex {
-    display: flex;
+display: flex;
+text-align: center;
+    
+flex-direction: column;
+    
+ @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: baseline;
+ }
+    
+@media screen and (max-width: 1199px) {
+    gap: 60px;
+ }
+    
+@media screen and (min-width: 1200px) {
+    text-align: justify;
+    align-items: baseline;
+ }
 }
+
 
 .logo-pre-title {
     color: #FFFFFF;
