--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -76,6 +76,9 @@
 
 .logo-list {
     display: flex;
+    @media screen and (max-width: 767px) {
+            display: none;
+        }
 }
 
 .logo__item:not(:last-child) {
@@ -97,6 +100,19 @@
     &:hover {
     color: #2196F3;
 }
+@media screen and (min-width: 768px) {
+    align-items: center;
+    display: flex;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+@media screen and (min-width: 1200px) {
+    align-items: center;
+    display: flex;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
 }
 
 .pozi {
@@ -106,8 +122,20 @@
 
 
 .contacts-list {
-    display: flex;
     margin-left: auto;
+
+    @media screen and (max-width: 767px) {
+        display: none;
+        }
+    
+        @media screen and (min-width: 768px) {
+        margin-left: auto;
+        }
+    
+        @media screen and (min-width: 1200px) {
+        display: flex;
+        margin-left: auto;
+        }
 }
 
 .contacts-item {
@@ -119,9 +147,6 @@
 }
 
 .contacts-mail__link {
-    display: flex;
-    align-items: center;
-    gap: 10px;
     font-weight: 500;
     font-size: 14px;
     line-height: calc(16/14);
@@ -138,14 +163,24 @@
     color: #2196F3;
     fill: #2196F3;
 }
+@media screen and (min-width: 768px) {
+    align-items: center;
+    display: flex;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+@media screen and (min-width: 1200px) {
+    align-items: center;
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
 }
 
 
 
 .contacts-tel__link {
-    display: flex;
-    align-items: center;
-    gap: 10px;
     font-weight: 500;
     font-size: 14px;
     line-height: calc(16/14);
@@ -160,6 +195,19 @@
 &:hover {
     color: #2196F3;
     fill: #2196F3;
+}
+@media screen and (min-width: 768px) {
+    align-items: center;
+    display: flex;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+@media screen and (min-width: 1200px) {
+    align-items: center;
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 }
 
