--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -4,6 +4,24 @@
     justify-content: center;
     margin-bottom: 50px;
     gap: 8px;
+
+    padding-top: 94px;
+        padding-bottom: 94px;
+    
+        @media screen and (min-width: 480px) {
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            padding-top: 94px;
+            padding-bottom: 94px;
+        }
 }
 
 
@@ -11,9 +29,14 @@
 .option-list {
     display: flex;
     flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
     gap: 30px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        }
+
 }
 
 .option-prod {
@@ -65,6 +88,13 @@
 
 .option-item {
     width: 370px;
+    @media screen and (min-width: 768px) {
+            width: calc((100% - 30px) / 2);
+        }
+    
+        @media screen and (min-width: 1200px) {
+            width: calc((100% - 60px) / 3);
+        }
 
 }
 
