--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -4,24 +4,6 @@
     justify-content: center;
     margin-bottom: 50px;
     gap: 8px;
-
-    padding-top: 94px;
-        padding-bottom: 94px;
-    
-        @media screen and (min-width: 480px) {
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
-    
-        @media screen and (min-width: 768px) {
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
-    
-        @media screen and (min-width: 1200px) {
-            padding-top: 94px;
-            padding-bottom: 94px;
-        }
 }
 
 
@@ -29,14 +11,9 @@
 .option-list {
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
     gap: 30px;
-
-    @media screen and (min-width: 768px) {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        }
-
 }
 
 .option-prod {
@@ -88,13 +65,6 @@
 
 .option-item {
     width: 370px;
-    @media screen and (min-width: 768px) {
-            width: calc((100% - 30px) / 2);
-        }
-    
-        @media screen and (min-width: 1200px) {
-            width: calc((100% - 60px) / 3);
-        }
 
 }
 
@@ -148,28 +118,9 @@
 }
 
 .end-flex {
-display: flex;
-text-align: center;
-    
-flex-direction: column;
-    
- @media screen and (min-width: 768px) {
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
+    display: flex;
     align-items: baseline;
- }
-    
-@media screen and (max-width: 1199px) {
-    gap: 60px;
- }
-    
-@media screen and (min-width: 1200px) {
-    text-align: justify;
-    align-items: baseline;
- }
 }
-
 
 .logo-pre-title {
     color: #FFFFFF;
