--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -1,28 +1,18 @@
 .team {
     background-color: #F5F4FA;
-    padding-top: 60px;
-    padding-bottom: 60px;
-
-    @media screen and (min-width:1200px){
-        padding-top: 94px;
-        padding-bottom: 94px;
-    }
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 
 .team-titel {
     font-weight: 700;
-    font-size: 28px;
-    line-height: calc(32/28);
+    font-size: 36px;
+    line-height: calc(42/36);
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
     margin-bottom: 50px;
-    
-    @media screen and (min-width:1200px) {
-    font-size: 36px;
-    line-height: calc(42/36);
-    }
 }
 
 .team-list-titel {
@@ -38,37 +28,10 @@
 .team__list {
     display: flex;
     justify-content: center;
-
-    @media screen and (min-width: 768px) {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 30px;
-        }
-    
-        @media screen and (min-width: 1200px) {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 30px;
-        }
 }
 
 .team__item {
-    width: 100%;
-    
-        @media screen and (max-width: 767px) {
-            &:not(:last-child) {
-                margin-bottom: 30px;
-            }
-        }
-    
-        @media screen and (min-width: 768px) {
-            width: calc((100% - 30px) / 2);
-        }
-    
-        @media screen and (min-width: 1200px) {
-            width: calc((100% - 90px) / 4);
-        }
-        
+    margin-right: 30px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
